# ridgeback_mapf

./: README.md  README.zh-CN.md
ira_laser_tools/: CMakeLists.txt
ira_laser_tools/launch/: laserscan_multi_merger.launch  laserscan_multi_merger_single_robot.launch
ira_laser_tools/src/: laserscan_multi_merger.cpp
laser_filters/launch/: ridgeback_filter.launch  ridgeback_filter.yaml  ridgeback_filter_single_robot.launch
ridgeback_control/config/: control.yaml  control_0.yaml  control_1.yaml
ridgeback_control/launch/: control.launch  teleop.launch
ridgeback_description/launch/: description.launch
ridgeback_description/urdf/: accessories.urdf.xacro  ridgeback.gazebo
ridgeback_desktop/ridgeback_desktop/: CHANGELOG.rst  package.xml
ridgeback_desktop/ridgeback_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
ridgeback_navigation/config/: karto_mapper_params.yaml
ridgeback_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  karto_demo.launch
ridgeback_navigation/maps/: rglab0302.pgm  rglab0302.yaml  rglab_0302_low_reso.pgm  rglab_0302_low_reso.yaml  rgmap0217.pgm  rgmap0217.yaml  rgmap0217_low_reso.pgm  rgmap0217_low_reso.yaml
ridgeback_navigation/multi_launch/: multi_map_merge.launch  multi_mapping.launch  multi_mapping_single.launch  multi_nav.launch  (+1 more)
ridgeback_test/: CMakeLists.txt  package.xml
ridgeback_test/config/: teleop_js1.yaml
ridgeback_test/launch/: multi_ridgeback_world.launch  ridgeback_world.launch  spawn_ridgeback.launch  teleop.launch
ridgeback_test/src/: laser_frame_correct.cpp  odom_to_odom_correct.cpp
(+29 files in other folders)
